# RubiksCube

./: .gitignore  CMakeLists.txt  README.md  a.out  compile_commands.json  cube.cc  cube.h  cube_test.cc  cube_testing.sh  face.cc  face.h  face_test.cc  face_testing.sh  rubiks.cc  rubiks.h  run_rubiks.sh  testing.sh  types.h
